27.3.2
------

27.3.1
------
(RB=1711993)
Provide an extension point for constructing the validating schema

(RB=1691783)
Enable string sharing when generating LICOR binary

27.3.0
------
(RB=1694693)
Check compatibility of IDL service errors and schema field validators

27.2.0
------
(RB=1691149)
Fix $returnEntity response validation bug

(RB=1690521)
Adding switch for destroyStaleFiles

(RB=1690295)
In ServiceError interface integer http status code has been changed to HttStatus type

27.1.7
------
(RB=1690826)
Set TimingContext#complete log from warn to debug.

(RB=1687176)
Updated MockValidationErrorHandler to create BadRequest response

27.1.6
------
(RB=1675664)
Add the ability to specify the TimingImportance of a TimingKey to TimingContextUtil.

27.1.5
------
(RB=1660016)
Adding RampUp RateLimiter

27.1.4
------
(RB=1676246)
Client integration for service error standardization

(RB=1683486)
Added Service Unavailable Http Status Code 503 to RestStatus Class

(RB=1667220)
Added ErrorResponseValidationFilter for error response validation

(RB=1664597)
Add support for method parameter service errors and success status codes

(RB=1660528)
Server integration for service error standardization

(RB=1669927)
Revert "Migrate PegasusPlugin from Groovy to Java."

(RB=1648868)
Migrate PegasusPlugin from Groovy to Java.

(RB=1660568)
Fix stale build directory for dataTemplates

(RB=1660464)
Add logging for troubleshooting channel pool

27.1.3
------
(RB=1650555)
Add support for defining service errors, document service errors in the IDL

27.1.2
------
(RB=1656690)
Update GenerateAvroSchemaTask to allow overriding namespaces in the generated Avro files.

27.1.1
------
(RB=1648329)
Added ValidationErrorHandler interface.

(RB=1641341)
Migrate Pegasus utilities from Groovy to Java.

27.1.0
------
(RB=1648826)
Fix ChangedFileReportTask property annotations.

(RB=1648828)
Migrate CheckIdlTask from Groovy to Java.

(RB=1648831)
Migrate CheckRestModel task from Groovy to Java.
